--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node day1; node day4; node day10",
     "test": "jest"
   },
   "author": "Pablo Suarez",
